--- a/wemeet/templates/account/changepassword.html
+++ b/wemeet/templates/account/changepassword.html
@@ -1,11 +1,8 @@
 {% extends 'base.html' %}
-
-{% url 'register' as nav_register %}
-{% url 'forgotPass' as nav_forgotPass %}
-
 {% load static %}
 
-{% block title %} Login with {{block.super}} {% endblock %}
+{% url 'homepage' as 'nav_home' %}
+{% block title %} Reset Password | {{block.super}} {% endblock %}
 {% block topbar %}{% endblock topbar %}
 {% block navbar %}{% endblock navbar %}
 
@@ -16,17 +13,16 @@
         <div class="container">
             <div class="login-wrapper rlp-wrapper">
                 <div class="login-table rlp-table">
-                    <img src="{% static 'assets/images/logo.png' %}" alt="Logo" style="width: 120px; height: 120px; margin-bottom: -20px;" class="login"/>
-                    <div class="login-title rlp-title">login</div>
-                    {% if message %}
-                        <h4 class="text-danger"> {{ message }} </h4>
-                    {% endif %}
-                    <form method="POST">
+                    <a href="../homepage/">
+                        <img src="{% static 'assets/images/logo.png' %}" alt="Logo" style="width: 120px; height: 120px; margin-bottom: -20px;" class="login"/>
+                    </a>
+                    <div class="login-title rlp-title">Reset Password</div>
+                    <form method="POST" novalidate>
                         {% csrf_token %}
                         <div class="login-form bg-w-form rlp-form">
                             <table>
                                 <div class="row">
-                                    {% for field in form.visible_fields %}
+                                    {% for field in form %}
                                     <div class="col-md-12">
                                         <label for="{{field.id_for_label}}" class="control-label form-label">{{field.label}} <span class="highlight">*</span></label>
                                         {{field.errors}}
@@ -35,11 +31,9 @@
                                     {% endfor %}
                                 </div>
                             </table>
-                            <br>
-                            <a href="{% url 'register' %}">Don't have an account?</a>
                         </div>
                         <div class="login-submit">
-                            <button type="submit" class="btn btn-login btn-green"><span>sign in</span></button>
+                            <button type="submit" class="btn btn-login btn-green"><span>Reset</span></button>
                         </div>
                     </form>
                 </div>
@@ -48,5 +42,4 @@
     </div>
 </div>
 {% endblock content %}
-{% block go_to_top %}{% endblock go_to_top %}
 {% block footer %}{% endblock footer %}
