--- a/wemeet/templates/board/boardDetails.html
+++ b/wemeet/templates/board/boardDetails.html
@@ -4,6 +4,9 @@
 {% block topbar %} {% endblock %}
 {% block content %}
 {% load boardTags %}
+{% load accessTags %}
+{% with board|getUsersAccessRights:user as hasRight %}
+
 <style>
     .test:after {
         content: '\2807';
@@ -19,7 +22,8 @@
                 <div class="panel panel-default col-md-12" style="border: solid 1px #86bc42; margin-left: 5px;">
                     <!-- Default panel contents -->
                     <div class="panel-heading text-left" style="background-color: #86bc42;">
-                        <h4>{{ board.boardTitle }}</h4>
+                        <span class="h4" style="font-weight: 800">{{ board.boardTitle }}</span>
+                        <span class="layout-right" style="font-weight: 500">Code: {{ board.token }}</span>
                     </div>
                     <div class="panel-body text-justify">
                         <br>
@@ -44,12 +48,13 @@
             </div>
             <!-- Tab panes-->
             <div class="tab-content courses-content">
+                <!-- posts panel -->
                 <div id="posts" role="tabpanel" class="tab-pane fade in active">
                     <div class="style-show style-grid row">
                         <div class="col-sm-12">
                             <div class="news-detail">
                                 <div class="news-comment">
-                                    {% if isOwner %}
+                                    {% if hasRight.CREATE_POST %}
                                     <div class="panel panel-default col-md-12" style="border: solid 1px #86bc42; margin-left: 5px;">
                                         <!-- Default panel contents -->
                                         <div class="panel-heading text-left">
@@ -59,7 +64,8 @@
                                             <br>
                                             <div style="font-size: 1.3rem">
                                                 <div class="col-md-12">
-                                                    <form action="" method="POST">
+                                                    <form action="" enctype="multipart/form-data">
+                                                        {% csrf_token %}
                                                         <input type="text" name="" id="id_postTitle" placeholder="Enter The Post Title" class="form-control form-input" required>
                                                         <br>
                                                         <textarea name="" id="postForm" cols="3" class="form-control" style="resize: vertical; height: 100px;" placeholder="Enter Post Description" cols="5" required></textarea>
@@ -82,6 +88,7 @@
                                     <br><br>
                                     <h1 class="news-comment-title">Posts</h1>
                                     <br><br>
+                                    {% if hasRight.VIEW_POST %}
                                     <ul class="comment-list list-unstyled">
                                         <li class="media">
                                             <div class="list-item">
@@ -112,109 +119,55 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
+                <!-- poll panel -->
                 <div id="poll" role="tabpanel" class="tab-pane fade">
-                    {% if user == board.createdBy %}    
-                        <div class="panel panel-default col-md-12" style="border: solid 1px #86bc42; margin-left: 5px;margin-bottom: 100px;">
-                            <!-- Default panel contents -->
-                            <div class="panel-heading text-left">
-                                <h4>Create Poll</h4>
-                            </div>
-                            <div class="panel-body text-justify">
-                                <br>
-                                <div style="font-size: 1.3rem">
-                                    <div class="col-md-1"></div>
-                                    <div class="col-md-10">
-                                        <form action="{% url 'create_poll' boardId=board.boardId %}" method="POST">
-                                            {% csrf_token %}
-                                            <label for="question" class="control-label form-label">Question: <span class="highlight">*</span></label>
-                                            <input type="text" class="form-control control-input" name="pollQuestion" required><br>
-                                            <label for="deadline" class="control-label form-label">Deadline: <span class="highlight">*</span></label>
-                                            <input type="date" name="deadlineDate" class="form-control control-input" required>
-                                            <input type="time" name="deadlineTime" class="form-control control-input" required><br>
-                                            <label for="totalChoices" class="control-label form-label">Number of Choices: (Maximum 10) <span class="highlight">*</span></label>
-                                            <input type="number" id="choice" class="form-control control-input" name="choice" value="2" max=10 min=2 required><br />
-                                            <div id="container"></div>
-                                            <br>
-                                            <a id="filldetails" class="btn btn-login btn-green" onclick="addFields()"><span>Add Choices</span></a>
-                                            &nbsp;&nbsp;&nbsp;&nbsp;
-                                            <button type="submit" name="submit" class="btn btn-login btn-green"><span>Create Poll</span></button>
-                                        </form>
-                                    </div>
-                                    <div class="col-md-1"></div>
-                                </div>
-                                <br>
-                            </div>
+                    {% if hasRight.CREATE_POLL %}  
+                    <div class="panel panel-default col-md-12" style="border: solid 1px #86bc42; margin-left: 5px;margin-bottom: 100px;">
+                        <!-- Default panel contents -->
+                        <div class="panel-heading text-left">
+                            <h4>Create Poll</h4>
                         </div>
-
-                        {% if polls %}
-                        <br><br>
-                        <h1 class="news-comment-title">Polls</h1>
-                        <br><br>
-                        {% endif %}
-                        {% for poll in polls %}
-                            <div class="row" style="margin-top: 20px;">
+                        <div class="panel-body text-justify">
+                            <br>
+                            <div style="font-size: 1.3rem">
                                 <div class="col-md-1"></div>
-                                <div class="panel panel-default col-md-10 hvr hvr-float" style="border: solid 1px #86bc42; margin-left: 5px;">
-                                    <!-- Default panel contents -->
-                                    <div class="panel-heading">
-                                        <h3>{{ poll.pollQuestion }}</h3>
-                                        {% now "Y-m-d H:i:s.u" as todays_date %}
-                                        {% if poll.isActive %}
-                                            <h4 style="color: green;">Active</h4>
-                                        {% else %}
-                                            <h4 style="color: red;">Closed</h4>
-                                        {% endif %}
-                                    </div>
-                                    <div class="panel-body">
-                                        <div class="course-table col-md-12">
-                                            <div class="table-header">
-                                                <table class="edu-table-responsive">
-                                                    <thead>
-                                                    <tr class="heading-table">
-                                                        <th class="col-3 h3">Choice</th>
-                                                        <th class="col-3 h3">Votes</th>
-                                                    </tr>
-                                                    </thead>
-                                                </table>
-                                            </div>
-                                            <div class="table-body">
-                                                <table class="edu-table-responsive table-hover">
-                                                    <tbody>
-                                                    {% for choice in poll.choices_set.all %}
-                                                    <tr class="table-row" style="text-transform:capitalize;">
-                                                        <td class="left col-3">
-                                                            <span class="h4">
-                                                                {{ choice.choice }}
-                                                            </span>
-                                                        </td>
-                                                        <td class="col-3">
-                                                            <span class="h4">
-                                                                {{ choice.count }}
-                                                            </span>
-                                                        </td>
-                                                    </tr>
-                                                    {% endfor %}
-                                                    </tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div class="col-md-10">
+                                    <form action="{% url 'create_poll' boardId=board.boardId %}" method="POST">
+                                        {% csrf_token %}
+                                        <label for="question" class="control-label form-label">Question: <span class="highlight">*</span></label>
+                                        <input type="text" class="form-control control-input" name="pollQuestion" required><br>
+                                        <label for="deadline" class="control-label form-label">Deadline: <span class="highlight">*</span></label>
+                                        <input type="date" name="deadlineDate" class="form-control control-input" required>
+                                        <input type="time" name="deadlineTime" class="form-control control-input" required><br>
+                                        <label for="totalChoices" class="control-label form-label">Number of Choices: (Maximum 10) <span class="highlight">*</span></label>
+                                        <input type="number" id="choice" class="form-control control-input" name="choice" value="2" max=10 min=2 required><br />
+                                        <div id="container"></div>
+                                        <br>
+                                        <a id="filldetails" class="btn btn-login btn-green" onclick="addFields()"><span>Add Choices</span></a>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;
+                                        <button type="submit" name="submit" class="btn btn-login btn-green"><span>Create Poll</span></button>
+                                    </form>
                                 </div>
                                 <div class="col-md-1"></div>
                             </div>
-                        {% endfor %}
-
-                    {% else %}
-                        {% if polls %}
-                        <h1 class="news-comment-title">Polls</h1>
-                        <br><br>
-                        {% endif %}
+                            <br>
+                        </div>
+                    </div>
+                    {% endif %}
+                
+                    {% if polls %}
+                    <h1 class="news-comment-title">Polls</h1>
+                    <br><br>
+                    {% endif %}
+                    {% with hasRight.GIVE_VOTE as give_vote %}
+                    {% with hasRight.VIEW_POLL_RESULT as view_poll_result %}
+                    
                         {% for poll in polls %}
                         <div class="row" style="margin-top: 20px;">
                             <div class="col-md-1"></div>
@@ -231,6 +184,7 @@
                                 </div>
                                 <div class="panel-body">
                                     {% if poll.isActive %}
+                                        {% if give_vote %}
                                         <form>
                                             {% csrf_token %}
                                             <ul class="list-group">
@@ -243,7 +197,9 @@
                                                 </li>
                                             </ul>
                                         </form>
+                                        {% endif %}
                                     {% else %}
+                                        {% if hasRight.VIEW_POLL_RESULT %}
                                         <ul class="list-group">
                                         {% for choice in poll.choices_set.all %}
                                             <h4>
@@ -253,15 +209,19 @@
                                             </h4>
                                         {% endfor %}
                                         </ul>
+                                        {% endif %}
                                     {% endif %}
                                 </div>
                             </div>
                             <div class="col-md-1"></div>
                         </div>
                         {% endfor %}
-                    {% endif %}
+                    
+                    {% endwith %}
+                    {% endwith %}
+                    
                 </div>
-                
+                <!-- people panel -->
                 <div id="people" role="tabpanel" class="tab-pane fade">
                     <div class="row" style="font-size: 1.8rem; margin-top: 10px; margin-bottom: 100px;">
                         <div class="col-md-1"></div>
@@ -269,7 +229,7 @@
                             <div class="course-syllabus">
                                 <div>
                                     <span class="course-syllabus-title underline layout-left">Members</span>
-                                    {% if isOwner %}
+                                    {% if hasRight.INVITE_PEOPLE %}
                                         <button type="button" class="btn btn-login btn-green layout-right" data-toggle="modal" data-target="#invitePeopleModal">
                                             <span>
                                                 Add Member
@@ -284,8 +244,7 @@
                                             <table class="edu-table-responsive">
                                                 <thead>
                                                 <tr class="heading-table">
-                                                    <th class="col-4">First Name</th>
-                                                    <th class="col-4">Last Name</th>
+                                                    <th class="col-4">Full Name</th>
                                                     <th class="col-4">Role</th>
                                                 </tr>
                                                 </thead>
@@ -296,20 +255,21 @@
                                                 <tbody>
                                                 {% for member in members %}
                                                 <tr class="table-row" style="text-transform:capitalize;">
-                                                    <td class="left col-4">
+                                                    <td  title="Manage {{ member.user.first.first_name }}'s Acceess Rights" class="left col-4">
+                                                        {% if hasRight.VIEW_MEM_PER %}
+                                                        <a href="{% url 'people_board_details' boardMemberId=member.id %}">{% endif %}
                                                         <span>
                                                             {{ member.user.first.first_name }} 
                                                         </span>
-                                                    </td>
-                                                    <td class="col-4">
                                                         <span>
                                                             {{ member.user.first.last_name }}
                                                         </span>
+                                                        {% if hasRight.VIEW_MEM_PER %}</a>{% endif %}
                                                     </td>
                                                     <td class="col-4">
-                                                        <span>
-                                                            {{ board|memberRole:member.user.first }}
-                                                        </span>
+                                                        {% for role in member.roleId.all %}
+                                                             <span>{{ role.role }}</span>
+                                                        {% endfor %}
                                                     </td>
                                                 </tr>
                                                 {% endfor %}
@@ -340,7 +300,7 @@
     </div>
 </div>
 <!-- Invite People Code -->
-{% if isOwner %}
+{% if hasRight.INVITE_PEOPLE %}
     <div class="modal fade" id="invitePeopleModal" role="dialog">
         <div class="modal-dialog">
           <!-- Modal content-->
@@ -404,7 +364,7 @@
     </script>
 {% endif %}
 <!-- create post's script code -->
-{% if isOwner %}
+{% if hasRight.CREATE_POST %}
 <script>
     // Post and File Attachment Script
     let attachedFilesList = document.getElementById('attachedFilesList');
@@ -508,7 +468,7 @@
 {% endif %}
 
 <script type='text/javascript'>
-        $('.choice').click(function()
+    $('.choice').click(function()
     {
         var choice;
         choice = $(this).val();
@@ -527,4 +487,5 @@
          })
     });
 </script>
+{% endwith %}
 {% endblock content %}
