--- a/wemeet/templates/board/boardDetails.html
+++ b/wemeet/templates/board/boardDetails.html
@@ -64,16 +64,16 @@
                                             <br>
                                             <div style="font-size: 1.3rem">
                                                 <div class="col-md-12">
-                                                    <form action="" enctype="multipart/form-data">
+                                                    <form action="{% url 'create_post' boardId=board.boardId %}" method="POST" enctype="multipart/form-data">
                                                         {% csrf_token %}
-                                                        <input type="text" name="" id="id_postTitle" placeholder="Enter The Post Title" class="form-control form-input" required>
+                                                        <input type="text" name="postTitle" id="id_postTitle" placeholder="Enter The Post Title" class="form-control form-input" required>
                                                         <br>
-                                                        <textarea name="" id="postForm" cols="3" class="form-control" style="resize: vertical; height: 100px;" placeholder="Enter Post Description" cols="5" required></textarea>
+                                                        <textarea name="postDescription" id="postForm" cols="3" class="form-control" style="resize: vertical; height: 100px;" placeholder="Enter Post Description" cols="5" required></textarea>
                                                         <br>
                                                         <span id="attachedFilesList" class="row"></span>
                                                         <br>
                                                         <button type="submit" class="btn btn-login btn-green" id="postBtn"><span>Post</span></button>
-                                                        <input type="file" name="file" id="fileUpload" multiple onchange="previewFiles(event);">
+                                                        <input type="file" name="postAttachment" id="fileUpload"  onchange="previewFiles(event);">
                                                         &nbsp;&nbsp;
                                                         <button type="button" class="btn btn-login btn-green" onclick='$("#fileUpload").click()'>
                                                             <span class="fa fa-paperclip fa-lg"> Add</span>
@@ -89,6 +89,7 @@
                                     <h1 class="news-comment-title">Posts</h1>
                                     <br><br>
                                     {% if hasRight.VIEW_POST %}
+                                    {% for post in posts %}
                                     <ul class="comment-list list-unstyled">
                                         <li class="media">
                                             <div class="list-item">
@@ -96,7 +97,7 @@
                                                 <div class="media-body">
                                                     <div class="pull-left">
                                                         <div class="info">
-                                                            <div class="reader item"><a href="#">Charlotte</a></div>
+                                                            <div class="reader item"><a href="#">{{post.postTitle}}</a></div>
                                                         </div>
                                                     </div>
                                                     <div class="pull-right">
@@ -104,21 +105,22 @@
                                                             <div class="test dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                             </div>
                                                             <ul class="dropdown-menu dropdown-menu-right">
-                                                                <li><a href="#" class="link-page">Edit</a></li>
-                                                                <li><a href="#" class="link-page">Delete</a></li>
+                                                                <li><a href="{% url 'edit_post' postId=post.postId %}" class="link-page">Edit</a></li>
+                                                                <li><a href="{% url 'delete_post' postId=post.postId %}" class="link-page">Delete</a></li>
                                                             </ul>
                                                         </div>
                                                     </div>
                                                     <div class="clearfix"></div>
-                                                    <div class="time" style="margin-top: 10px;">March 23, 2017 at 7:59 pm</div>
-                                                    <div class="des" style="margin-top: 10px;"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p></div>
+                                                    <div class="time" style="margin-top: 10px;">{{post.createdOn}}</div>
+                                                    <div class="des" style="margin-top: 10px;"><p>{{post.postDescription}}</p></div>
                                                     <div class="pull-right">
-                                                        <button type="submit" class="btn btn-login btn-green"><span>View Post</span></button>
+                                                       <a href="{% url 'view_post' postId=post.postId %}"> <button type="submit" class="btn btn-login btn-green"><span>View Post</span></button></a>
                                                     </div>
                                                 </div>
                                             </div>
                                         </li>
                                     </ul>
+                                    {% endfor %}
                                     {% endif %}
                                 </div>
                             </div>
